# airflow-esp32

./: .gitignore  CMakeLists.txt  README.md  _flash.ps1  add_assembly_diagram.py  add_lvgl.ps1  add_principle_diagram.py  build.ps1  build_only.ps1  build_tmp.ps1  configure.ps1  extracted_test.js  fix_python.ps1  flash.bat  flash.ps1  gen_fan_icon.py  m_object.txt  partitions.csv  replace_principle_diagram.py  sdkconfig.defaults  set_target.ps1
docs/: AirPurifier_Complete_Guide.html  AirPurifier_Complete_Guide.html.bak2  NT35510_芯片手册.md  (+8 more)
docs/TK043F1509整理资料/ESP32S3_LVGL_9.2_TK043F1509/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
docs/TK043F1509整理资料/ESP32S3_LVGL_9.2_TK043F1509/main/ui/fonts/: ui_font_Be30.c
docs/TK043F1509整理资料/ESP32S3_LVGL_9.2_TK043F1509/main/ui/images/: ui_img_dc2_png.c  ui_img_km2_png.c  ui_img_km3_png.c  ui_img_kw1_png.c  ui_img_mv1_png.c
docs/TK043F1509整理资料/ESP32S3_LVGL_9.2_TK043F1509/main/ui/screens/: ui_Screen1.c
main/: CMakeLists.txt  app_controller.c  app_controller.h  board.h  board_rgb.h  event_bus.c  event_bus.h  idf_component.yml  led.code-workspace  main.c
main/assets/: logo_rgb565.c  logo_rgb565.h
main/holiday/: holiday_client.c  holiday_client.h
main/ui/: font_cjk_22.c  font_cjk_28.c  font_cjk_36.c  font_cjk_48.c  font_melody.c  ui_apple_anim.c  ui_apple_anim.h  ui_boot.c  ui_boot.h  ui_design.h  ui_events.c  ui_lang.c  ui_lang.h  ui_manager.c  ui_manager.h  ui_provision_prompt.c  ui_provision_prompt.h  ui_screen_brightness.c  ui_screen_brightness.h  ui_screen_home.c  ui_screen_home.h  ui_screen_network.c  ui_screen_network.h  ui_screen_power.c  ui_screen_power.h  ui_screen_settings.c  ui_screen_settings.h  ui_screen_sound.c  ui_screen_sound.h  ui_settings.c  ui_theme.c  ui_theme.h  ui_wifi.c
(+145 files in other folders)
